fix browser button not work on firefox

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -26,6 +26,10 @@
 	}
 }
 
+label.btn {
+	padding: 6px 0;
+}
+
 .btn.btn-primary {
 	border: 1px solid #179BA0;
 	background-color: #179BA0;
